# crabber

./: .dockerignore  CMakeLists.txt  README.md
.github/workflows/: test-crabber-docker.yml
build-wasm/: .gitignore  README.md  build-gmp.sh  build.sh  deploy-docs.sh  gen-examples.py  index.html  run.mjs
build-wasm/wasm-config/crab/: config.h
docker/: crabber.Dockerfile
docs/: crabber.js  crabber.wasm  examples.js  index.html
emacs-mode/: crabir-mode.el
include/crab_tests/: analyzer.hpp  crabir.hpp  crabir_builder.hpp  domains.hpp  parser.hpp  run_test.hpp
include/crabber/: analyzer.hpp  crabber.hpp  crabir.hpp  crabir_builder.hpp  domains.hpp  parser.hpp
samples/: test-1.crabir  test-10.crabir  test-11.crabir  test-2.crabir  test-3.crabir  test-4.crabir  test-5.crabir  test-6.crabir  test-7.crabir  test-8.crabir  test-9.crabir  test-call-1.crabir  test-call-2.crabir  test-call-3.crabir  test-call-4.crabir  test-call-fail-1.crabir  test-call-fail-2.crabir
src/: analyzer.cpp  crabber.cpp  crabir_builder.cpp  parser.cpp  run_test.cpp
src/domains/: boxes_domain.cpp  dis_interval_domain.cpp  domain_defs.hpp  domain_registry.hpp  fixed_tvpi_domain.cpp  interval_domain.cpp  octagons_domain.cpp  pk_domain.cpp  pk_pplite_domain.cpp  symbolic_terms.cpp  zones_domain.cpp
vscode-mode/: README.md  language-configuration.json  package.json
vscode-mode/syntaxes/: crabir.tmLanguage.json
